applications/base/kyverno-policies/mutating-policies/spread-pods/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: spread-pods-test
policies:
  - ../spread-pods.yaml
resources:
  - resource.yaml
results:
  - policy: spread-pods
    rule: spread-statefulset-across-zones
    kind: StatefulSet
    resources:
      - my-statefulset
    patchedResource: patched.yaml
    result: pass
